fix spacing

--- a/src/components/section/CampSection.module.scss
+++ b/src/components/section/CampSection.module.scss
@@ -39,6 +39,8 @@
     align-items: center;
     justify-content: center;
 
+    white-space: pre-wrap;
+
     color: #F0FFF4;
     font-size: 16px;
     font-weight: 500;
